# Nukak3D

doc/develop/building_nukak3d/: BuildingNukak3D.lyx
nukak3d/: CMakeLists.txt
nukak3d/CMakeModules/: FindDCMTK.cmake  FindwxWidgets2.cmake  InstallRequiredSystemLibrariesLinux.cmake  UseDebian.cmake  UsewxWidgets2.cmake
nukak3d/doc/: CMakeLists.txt  GPL-license.txt  Licence.txt  Licence_InsightToolkit-3.4.0.txt  Licence_vtk-5.0.3.txt  Licence_vtkInria3D.txt  Licence_wxWidgets-2.8.5.txt  Readme.txt  doxygen.config.in
nukak3d/include/: CMakeLists.txt  nkAcercaDe.h  nkAdminPluginGui.h  nkDICOMDictionary.h  nkDICOMServer.h  nkEngine.h  nkFindSCU.h  nkIODialog.h  nkITKFilterServer.h  nkImageToImageFilter.h  nkInteractorStyleEndoCamera.h  nkKernel.h  nkLevelSets.h  nkMacro.h  nkMain.h  nkMoveSCU.h  nkNukak3D.h  nkObj3DViewer.h  nkPipedProcess.h  nkPlugin.h  nkStoreSCP.h  nkToolBar.h  nkToolBarMac.h  nkUtilities.h  nkVolViewer.h
nukak3d/packaging/: nukak3d.spec.in
nukak3d/resources/: CMakeLists.txt  Thumbs.db  iconMac.icns  icon_menu_mas.xpm  icon_menu_menos.xpm  logoLS.xpm  logo_bioingenium.xpm  main.xpm  nukak3d.rc  resource.h
nukak3d/resources/.nukak3d/locale/en/LC_MESSAGES/: nukak3d.mo  nukak3d.po
nukak3d/resources/.nukak3d/locale/es/LC_MESSAGES/: nukak3d.mo  nukak3d.po
nukak3d/src/: CMakeLists.txt  nkAdminPluginGui.cpp  nkDICOMDictionary.cpp  nkDICOMServer.cpp  nkEngine.cpp  nkFindSCU.cpp  nkIODialog.cpp  nkInteractorStyleEndoCamera.cpp  nkLevelSets.cpp  nkMain.cpp  nkNukak3D.cpp  nkObj3DViewer.cpp  nkPipedProcess.cpp  nkPlugin.cpp  nkStoreSCP.cpp  nkToolBar.cpp  nkToolBarMac.cpp  nkUtilities.cpp  nkVolViewer.cpp
